Project

General

Profile

Actions

Bug #21364

closed

rgw: set bucket versioning without Status in xml doesn't return error

Added by shasha lu over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  1. cat versioninig.xml
    <VersioningConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;/>

If using the xml to set bucket versioning, rgw will return OK.

Get versioninig found that, the bucket is verison-suspended.

Return EINVAL if "Status" no exist in xml is more proper

Actions #2

Updated by Jos Collin over 6 years ago

  • Assignee set to shasha lu
Actions #3

Updated by Kefu Chai over 6 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Yuri Weinstein over 6 years ago

Actions #5

Updated by Casey Bodley over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF