rgw: set bucket versioninig do not change versioning status if missing "Status" in xml

Fixes: http://tracker.ceph.com/issues/21364

Signed-off-by: Shasha Lu <lu.shasha@eisoo.com>